feat: 完善了Directory的转换